Fix socia tools alignment

--- a/css/prettyPhoto.css
+++ b/css/prettyPhoto.css
@@ -34,6 +34,7 @@
 	div.pp_default .pp_gallery ul li a { background: url(../images/prettyPhoto/default/default_thumb.png) center center #f8f8f8; border:1px solid #aaa; }
 	div.pp_default .pp_gallery ul li a:hover,
 	div.pp_default .pp_gallery ul li.selected a { border-color: #fff; }
+	div.pp_default .pp_social { margin-top: 7px; }
 
 	div.pp_default .pp_gallery a.pp_arrow_previous,
 	div.pp_default .pp_gallery a.pp_arrow_next { position: static; left: auto; }
@@ -326,8 +327,8 @@
 					margin: 0;
 				}
 				
-				.pp_social { float: left; margin: 7px 0 0 0; }
-				.pp_social .facebook { float: left; position: relative; top: -1px; margin-left: 5px; width: 55px; overflow: hidden; }
+				.pp_social { float: left; margin: 0; }
+				.pp_social .facebook { float: left; margin-left: 5px; width: 55px; overflow: hidden; }
 				.pp_social .twitter { float: left; }
 				
 				.pp_nav {
